--- a/Demo/DrawUIBezierPathFitToUIViewDemo/Base.lproj/Main.storyboard
+++ b/Demo/DrawUIBezierPathFitToUIViewDemo/Base.lproj/Main.storyboard
@@ -1,60 +1,64 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="v5n-Ak-B9c">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="v5n-Ak-B9c">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--DrawUIBezierPathFitToUIView Demo-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" userLabel="DrawUIBezierPathFitToUIView Demo" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" userLabel="DrawUIBezierPathFitToUIView Demo" customClass="ViewController" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="YQ0-Ty-wl7"/>
                         <viewControllerLayoutGuide type="bottom" id="jLI-gH-j6L"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dDC-wU-cm2" userLabel="Train View 280x280" customClass="TrainView">
-                                <rect key="frame" x="20" y="77" width="280" height="280"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dDC-wU-cm2" userLabel="Train View 280x280" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
+                                <rect key="frame" x="20" y="77" width="335" height="280"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2U-aa-VS1" userLabel="Train View 10x10" customClass="TrainView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v2U-aa-VS1" userLabel="Train View 10x10" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
                                 <rect key="frame" x="25" y="371" width="10" height="10"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Sj-y6-Jxi" userLabel="Train View 13x13" customClass="TrainView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Sj-y6-Jxi" userLabel="Train View 13x13" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
                                 <rect key="frame" x="74" y="368" width="13" height="13"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PeF-5r-tbE" userLabel="Train View 20x28" customClass="TrainView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PeF-5r-tbE" userLabel="Train View 20x28" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
                                 <rect key="frame" x="20" y="397" width="20" height="28"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Htc-yt-Mp7" userLabel="Train View 30x30" customClass="TrainView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Htc-yt-Mp7" userLabel="Train View 30x30" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
                                 <rect key="frame" x="65" y="395" width="30" height="30"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JA6-p4-yQA" userLabel="Train View 25x44" customClass="TrainView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JA6-p4-yQA" userLabel="Train View 25x44" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
                                 <rect key="frame" x="118" y="381" width="25" height="44"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgr-il-P0l" userLabel="Train View 45x45" customClass="TrainView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qgr-il-P0l" userLabel="Train View 45x45" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
                                 <rect key="frame" x="172" y="380" width="45" height="45"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPb-xe-Hgo" userLabel="Train View 60x60" customClass="TrainView">
-                                <rect key="frame" x="240" y="365" width="60" height="60"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tPb-xe-Hgo" userLabel="Train View 60x60" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
+                                <rect key="frame" x="240" y="365" width="115" height="60"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xd0-n7-Hks" userLabel="Train View 280x38-126" customClass="TrainView">
-                                <rect key="frame" x="20" y="433" width="280" height="126"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xd0-n7-Hks" userLabel="Train View 280x38-126" customClass="TrainView" customModule="DrawUIBezierPathFitToUIViewDemo" customModuleProvider="target">
+                                <rect key="frame" x="20" y="433" width="335" height="225"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="tPb-xe-Hgo" firstAttribute="top" secondItem="dDC-wU-cm2" secondAttribute="bottom" constant="8" symbolic="YES" id="22U-yr-cXD"/>
                             <constraint firstItem="xd0-n7-Hks" firstAttribute="top" secondItem="tPb-xe-Hgo" secondAttribute="bottom" constant="8" symbolic="YES" id="2Gq-KE-Gs3"/>
@@ -106,7 +110,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="v5n-Ak-B9c" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="qbo-v0-2DD">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -119,9 +123,4 @@
             <point key="canvasLocation" x="269" y="377"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
